welcome.lessons.welcome.variables.Variables.scala.error
Variables:15: error: not found: value poserBiscuit
poserBiscuit();
^